# c2casgiutils

./: .dockerignore  .pre-commit-config.yaml  .prospector.yaml  AGENT.md  AGENTS.md  C2CWSGIUTILS.md  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/: renovate.json5  requirements.txt  wait-url
.github/workflows/: main.yaml  pull-request-automation.yaml
acceptance_tests/fastapi_app/: .env  .gitignore  .prospector.yaml  .python-version  Dockerfile  docker-compose.override.sample.yaml  docker-compose.yaml  logging.yaml  pyproject.toml  requirements.txt
acceptance_tests/fastapi_app/fastapi_app/: api.py  main.py
acceptance_tests/fastapi_app/fastapi_app/api/v1/: api.py
acceptance_tests/fastapi_app/fastapi_app/api/v1/endpoints/: hello.py
acceptance_tests/fastapi_app/fastapi_app/core/: config.py
acceptance_tests/fastapi_app/test/: test_fastapi_app.py  test_health_checks.py
c2casgiutils/: __init__.py  auth.py  cli.py  config.py  headers.py  health_checks.py  redis_utils.py
c2casgiutils/broadcast/: __init__.py  interface.py  local.py  redis.py  types.py  utils.py
c2casgiutils/scripts/: genversion.py
c2casgiutils/tools/: __init__.py  headers.py  logging.py  logging_.py
c2casgiutils/tools/static/: index.js
c2casgiutils/tools/templates/: index.html
scaffold/: README.md  cookiecutter.json
scaffold/{{cookiecutter.project_slug}}/: Dockerfile  README.md  docker-compose.override.sample.yaml  docker-compose.yaml  logging.yaml  pyproject.toml
scaffold/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: api.py  config.py  main.py
test/: test_auth.py  test_broadcast.py  test_cli.py  test_config.py  test_header.py
