[tool.ruff]
target-version = "py310"
line-length = 110

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.poetry]
name = "c2casgiutils"
version = "0.0.0"
description = "Common utilities for Camptocamp ASGI applications"
readme = "README.md"
authors = ["Camptocamp <info@camptocamp.com>"]
keywords = ["sqlalchemy", "asgi", "fastapi"]
repository = "https://github.com/camptocamp/c2casgiutils"
license = "BSD-2-Clause"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Plugins',
    'Framework :: Pyramid',
    'Intended Audience :: Developers',
    'Intended Audience :: Information Technology',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Internet :: WWW/HTTP :: WSGI :: Application',
    'Typing :: Typed',
]
packages = [{ include = "c2casgiutils" }]
include = [
"c2casgiutils/py.typed",
]

[tool.poetry.scripts]
c2casgiutils-genversion = "c2casgiutils.scripts.genversion:main"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = {extras = ["standard"], version = "0.115.12"}

[tool.poetry.extras]
fastapi = [
  "fastapi",
]
all = [
  "fastapi",
]

[tool.poetry.group.dev.dependencies]
prospector = { version = "1.15.3", extras = ["with_bandit", "with_mypy", "with_pyroma", "with_ruff"] }
prospector-profile-duplicated = "1.10.5"
prospector-profile-utils = "1.22.3"
pytest = "8.3.5"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^(?P<base>\\d+(\\.\\d+)*)"
format-jinja = """
{%- if env.get("VERSION_TYPE") == "default_branch" -%}
{{serialize_pep440(bump_version(base, 1), dev=distance)}}
{%- elif env.get("VERSION_TYPE") == "stabilization_branch" -%}
{{serialize_pep440(bump_version(base, 2), dev=distance)}}
{%- elif distance == 0 -%}
{{serialize_pep440(base)}}
{%- else -%}
{{serialize_pep440(bump_version(base), dev=distance)}}
{%- endif -%}
"""

[tool.poetry-plugin-tweak-dependencies-version]
default = "present"

[build-system]
requires = [
  "poetry-core==2.1.3",
  "poetry-dynamic-versioning[plugin]==1.8.2",
  "poetry-plugin-tweak-dependencies-version==1.5.2",
  "poetry-plugin-drop-python-upper-constraint==1.0.0",
]
build-backend = "poetry.core.masonry.api"
