[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.poetry]
name = "fastapi_app"
version = "0.1.0"
description = "A sample c2casgiutils project with FastAPI"
authors = ["Camptocamp <info@camptocamp.com>"]
readme = "README.md"

[[tool.poetry.packages]]
include = "fastapi_app"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = {version = "0.115.12", extras = ["standard"]}
pydantic-settings = {version = "2.9.1"}
sentry-sdk = {version = "2.29.1", extras = ["fastapi"]}

[tool.poetry.group.dev.dependencies]
prospector = { version = "1.17.2", extras = ["with_mypy", "with_bandit", "with_pyroma", "with_ruff"] }
prospector-profile-duplicated = "1.10.5"
prospector-profile-utils = "1.23.0"
pytest = "8.3.5"
c2cwsgiutils = { version = "6.1.7", extras = ["test_images"] }
requests = "2.32.4"

[tool.build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"
